--- a/app/src/main/res/layout/fragment_station.xml
+++ b/app/src/main/res/layout/fragment_station.xml
@@ -8,9 +8,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
-        android:background="@color/white"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,17 +19,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black"
+            android:maxLines="1"
             android:hint="@string/cerca_una_stazione"
             android:minHeight="48dp"
             android:padding="10dp"
+            android:textSize="18sp"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/station_list"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/row_station"
+
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             />
 
     </LinearLayout>
